Update & Add articles pages 7

--- a/enVision-Magazine/enVisionMagazine-p5.html
+++ b/enVision-Magazine/enVisionMagazine-p5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Politics </div>
-            <img src="images/cold-war.png">
-            <h3> Cold War Impact in Modern Politics </h3>
+            <img src="images/neutral-switzerland.jpg">
+            <h3> Neutral Switzerland: A Political Path </h3>
             <p>
-            The Cold War, lasting from 1947 to 1991, continues to shape modern politics. It fostered a bipolar world dominated by the United States and the Soviet Union, leading to proxy wars, espionage, and an arms race.<br>
+            Switzerland is renowned for its centuries-long tradition of political neutrality. Established formally in 1815 at the Congress of Vienna, neutrality allowed the nation to avoid involvement in major European wars, including both World Wars.<br>
             <br>
-            The ideological clash between capitalism and communism influenced foreign policy, military alliances, and global economic systems. After the USSR's collapse, NATO expanded, sparking new tensions. Cybersecurity, misinformation campaigns, and geopolitical rivalries today echo Cold War dynamics.<br>
+           This stance not only safeguarded Switzerland’s independence but also helped it develop into a hub of diplomacy and humanitarian efforts. Geneva became home to international organizations like the Red Cross and the United Nations offices.<br>
             <br>
-            The era’s legacy persists in distrust between major powers and ongoing regional conflicts. Understanding the Cold War is essential to interpreting contemporary international relations and strategic decisions.
+            Switzerland’s neutrality is not isolation but active mediation—its political path demonstrates how a small nation can maintain stability and global influence through peace, negotiation, and steadfast impartiality.
             </p>
         </div>
                 <div id="interactives">
