--- a/enVision-Magazine/enVisionMagazine-py4.html
+++ b/enVision-Magazine/enVisionMagazine-py4.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Politics </div>
-            <img src="images/cold-war.png">
-            <h3> Cold War Impact in Modern Politics </h3>
+            <div class="tag">Physics </div>
+            <img src="images/quantum.jpg">
+            <h3> Quantum Physics: The World of the Small </h3>
             <p>
-            The Cold War, lasting from 1947 to 1991, continues to shape modern politics. It fostered a bipolar world dominated by the United States and the Soviet Union, leading to proxy wars, espionage, and an arms race.<br>
+            Quantum physics explores the strange and counterintuitive behavior of matter and energy at atomic and subatomic scales. Unlike classical physics, it reveals particles behaving as both waves and particles, with outcomes determined by probabilities rather than certainty.<br>
             <br>
-            The ideological clash between capitalism and communism influenced foreign policy, military alliances, and global economic systems. After the USSR's collapse, NATO expanded, sparking new tensions. Cybersecurity, misinformation campaigns, and geopolitical rivalries today echo Cold War dynamics.<br>
+            Concepts like superposition and entanglement challenge our understanding of reality, yet they power technologies such as semiconductors, lasers, and quantum computing. Pioneers like Einstein, Schrödinger, and Heisenberg opened this mysterious realm, reshaping science.<br>
             <br>
-            The era’s legacy persists in distrust between major powers and ongoing regional conflicts. Understanding the Cold War is essential to interpreting contemporary international relations and strategic decisions.
+            Quantum physics continues to inspire wonder, reminding us that the universe’s foundation is far more complex and fascinating than everyday experience suggests, blending mystery with technological promise.
             </p>
         </div>
                 <div id="interactives">
