--- a/enVision-Magazine/enVisionMagazine-p4.html
+++ b/enVision-Magazine/enVisionMagazine-p4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Politics </div>
-            <img src="images/cold-war.png">
-            <h3> Cold War Impact in Modern Politics </h3>
+            <img src="images/democracy.jpg">
+            <h3> Democracy: From Greece to Modern Days </h3>
             <p>
-            The Cold War, lasting from 1947 to 1991, continues to shape modern politics. It fostered a bipolar world dominated by the United States and the Soviet Union, leading to proxy wars, espionage, and an arms race.<br>
+           The concept of democracy was born in ancient Athens around the 5th century BCE, where citizens gathered to vote directly on laws and policies.<br>
             <br>
-            The ideological clash between capitalism and communism influenced foreign policy, military alliances, and global economic systems. After the USSR's collapse, NATO expanded, sparking new tensions. Cybersecurity, misinformation campaigns, and geopolitical rivalries today echo Cold War dynamics.<br>
+           This system, though limited to free male citizens, laid the foundation for people’s participation in governance. Over centuries, democracy evolved into representative forms seen today, where elected officials act on behalf of citizens.<br>
             <br>
-            The era’s legacy persists in distrust between major powers and ongoing regional conflicts. Understanding the Cold War is essential to interpreting contemporary international relations and strategic decisions.
+           Modern democracies value equality, freedom of speech, and human rights, echoing Athenian ideals but with broader inclusion. The journey from ancient Greece to today’s global democracies highlights humanity’s ongoing struggle to balance power, justice, and freedom in creating fair societies.
             </p>
         </div>
                 <div id="interactives">
