--- a/enVision-Magazine/enVisionMagazine-py3.html
+++ b/enVision-Magazine/enVisionMagazine-py3.html
@@ -7,7 +7,7 @@
 <head>
 <title> enVisionMagazine </title>
 <link href="css/styleVM.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/indexVM.js"></script>
+<script type="text/javascript" src="js/indexVM2.js" defer></script>
 </head>
     <body>
         <header>
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Politics </div>
-            <img src="images/cold-war.png">
-            <h3> Cold War Impact in Modern Politics </h3>
+            <div class="tag">Physics</div>
+            <img src="images/light.jpg">
+            <h3> Light Speed </h3>
             <p>
-            The Cold War, lasting from 1947 to 1991, continues to shape modern politics. It fostered a bipolar world dominated by the United States and the Soviet Union, leading to proxy wars, espionage, and an arms race.<br>
-            <br>
-            The ideological clash between capitalism and communism influenced foreign policy, military alliances, and global economic systems. After the USSR's collapse, NATO expanded, sparking new tensions. Cybersecurity, misinformation campaigns, and geopolitical rivalries today echo Cold War dynamics.<br>
-            <br>
-            The era’s legacy persists in distrust between major powers and ongoing regional conflicts. Understanding the Cold War is essential to interpreting contemporary international relations and strategic decisions.
+               Light travels through space at a constant speed of approximately 186,282 miles per second (299,792 kilometers per second) in a vacuum. <br>
+               <br>
+               This incredible velocity means that light from the Sun takes about 8 minutes and 20 seconds to reach Earth. Known as the cosmic speed limit, nothing in the universe can travel faster than light in a vacuum. <br>
+               <br>
+               This speed plays a crucial role in physics, especially in Einstein's theory of relativity, where it serves as a fundamental constant. The finite speed of light also helps scientists measure vast cosmic distances, using units such as light-years to describe them.
             </p>
         </div>
                 <div id="interactives">
@@ -156,7 +156,7 @@
             </div>
         </a>
     </div>
- 
+    
 </section>
 <!-- Footer -->
 
