--- a/enVision-Magazine/enVisionMagazine-py5.html
+++ b/enVision-Magazine/enVisionMagazine-py5.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Politics </div>
-            <img src="images/cold-war.png">
-            <h3> Cold War Impact in Modern Politics </h3>
+            <div class="tag">Physics </div>
+            <img src="images/pascal.jpg">
+            <h3> Pascal’s Machine: Birth of Mechanical Computing </h3>
             <p>
-            The Cold War, lasting from 1947 to 1991, continues to shape modern politics. It fostered a bipolar world dominated by the United States and the Soviet Union, leading to proxy wars, espionage, and an arms race.<br>
+            In 1642, Blaise Pascal invented the Pascaline, one of the earliest mechanical calculators. Designed to assist his father with tax calculations, it could add and subtract using geared wheels. Though limited compared to modern machines, it represented a leap in automating mathematics, reducing human error.<br>
             <br>
-            The ideological clash between capitalism and communism influenced foreign policy, military alliances, and global economic systems. After the USSR's collapse, NATO expanded, sparking new tensions. Cybersecurity, misinformation campaigns, and geopolitical rivalries today echo Cold War dynamics.<br>
+            Pascal’s machine paved the way for later innovations by Leibniz, Babbage, and ultimately modern computers. The Pascaline symbolizes the human drive to simplify complex tasks through invention.<br>
             <br>
-            The era’s legacy persists in distrust between major powers and ongoing regional conflicts. Understanding the Cold War is essential to interpreting contemporary international relations and strategic decisions.
+            From wooden gears to today’s silicon chips, Pascal’s machine marks an important milestone in humanity’s journey toward computational power and technological advancement.
             </p>
         </div>
                 <div id="interactives">
