Update & Add articles pages 8

--- a/enVision-Magazine/enVisionMagazine-S&P4.html
+++ b/enVision-Magazine/enVisionMagazine-S&P4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Spirituality & Philosophy </div>
-            <img src="images/shaw.jpg">
-            <h3> Bernard Shaw </h3>
+            <img src="images/philosophy-school.jpg">
+            <h3> Philosophy Schools in Athens </h3>
             <p>
-               George Bernard Shaw was a renowned Irish playwright, critic, and polemicist born in 1856. Known for his wit and sharp social commentary, he challenged Victorian norms with plays like "Pygmalion" and "Man and Superman".<br>
-               <br>
-               " Shaw addressed issues such as class inequality, education, and women's rights. His works combined humor with serious philosophical and political questions, making them both entertaining and thought-provoking.<br>
-               <br>
-               He received the Nobel Prize in Literature in 1925 and remains one of the most influential playwrights of the English language. Shaw believed in art as a vehicle for social change and intellectual engagement.
+            Athens was the birthplace of Western philosophy, home to influential schools that shaped thought for centuries. Socrates challenged citizens with questions, emphasizing critical inquiry.<br>
+            <br>
+            His student Plato founded the Academy, where abstract ideals and justice were explored. Aristotle, in turn, established the Lyceum, emphasizing logic, science, and practical ethics. These schools became centers of intellectual debate, shaping education, politics, and culture.<br>
+            <br>
+            Their legacy continues to influence modern philosophy, science, and democracy. The Athenian schools were not merely academic spaces but vibrant forums where ideas about truth, virtue, and society were forged, echoing across human history and learning.
             </p>
         </div>
                 <div id="interactives">
