--- a/enVision-Magazine/enVisionMagazine-s4.html
+++ b/enVision-Magazine/enVisionMagazine-s4.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Spirituality & Philosophy </div>
-            <img src="images/shaw.jpg">
-            <h3> Bernard Shaw </h3>
+            <div class="tag">Social Sciences </div>
+            <img src="images/community.jpg">
+            <h3> Community Belonging in Social Science </h3>
             <p>
-               George Bernard Shaw was a renowned Irish playwright, critic, and polemicist born in 1856. Known for his wit and sharp social commentary, he challenged Victorian norms with plays like "Pygmalion" and "Man and Superman".<br>
-               <br>
-               " Shaw addressed issues such as class inequality, education, and women's rights. His works combined humor with serious philosophical and political questions, making them both entertaining and thought-provoking.<br>
-               <br>
-               He received the Nobel Prize in Literature in 1925 and remains one of the most influential playwrights of the English language. Shaw believed in art as a vehicle for social change and intellectual engagement.
+            In social science, community belonging is seen as a fundamental human need. It refers to the sense of connection, trust, and support people feel within groups. Belonging strengthens identity, encourages cooperation, and provides emotional stability.<br>
+            <br>
+            Studies show that individuals with strong community ties are healthier and more resilient. Belonging can form through shared culture, values, or experiences, whether in neighborhoods, workplaces, or online groups.<br>
+            <br>
+            Yet, exclusion or isolation can harm mental health and social development. Community belonging highlights how humans thrive not only as individuals but as part of supportive, interdependent networks shaping society and personal well-being.
             </p>
         </div>
                 <div id="interactives">
