--- a/enVision-Magazine/enVisionMagazine-S&P5.html
+++ b/enVision-Magazine/enVisionMagazine-S&P5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Spirituality & Philosophy </div>
-            <img src="images/shaw.jpg">
-            <h3> Bernard Shaw </h3>
+            <img src="images/stoic.jpg">
+            <h3> Stoic Philosophy: Strength in Virtue </h3>
             <p>
-               George Bernard Shaw was a renowned Irish playwright, critic, and polemicist born in 1856. Known for his wit and sharp social commentary, he challenged Victorian norms with plays like "Pygmalion" and "Man and Superman".<br>
-               <br>
-               " Shaw addressed issues such as class inequality, education, and women's rights. His works combined humor with serious philosophical and political questions, making them both entertaining and thought-provoking.<br>
-               <br>
-               He received the Nobel Prize in Literature in 1925 and remains one of the most influential playwrights of the English language. Shaw believed in art as a vehicle for social change and intellectual engagement.
+            Stoicism, founded in Athens by Zeno of Citium, taught resilience through wisdom, self-control, and acceptance of fate. It emphasized living in harmony with nature and focusing only on what one can control.<br>
+            <br>
+            Stoic philosophers like Seneca, Epictetus, and the Roman emperor Marcus Aurelius left writings that continue to inspire people facing adversity.<br>
+            <br>
+            Their teachings remind us that external events are beyond our control, but our reactions define our character. Stoicism’s timeless wisdom has influenced leaders, soldiers, and thinkers, offering tools to endure hardship with dignity and clarity, making it one of history’s most practical philosophies.
             </p>
         </div>
                 <div id="interactives">
