--- a/enVision-Magazine/enVisionMagazine-s2.html
+++ b/enVision-Magazine/enVisionMagazine-s2.html
@@ -12,25 +12,33 @@
     <body>
         <header>
              <div class="logo">
-                <a href="index.html"><img src="images/enVisionG.png"></a>
+                <img src="images/enVisionG.png">
             </div>
+            <img src="images/menu.png" id="menu-icon" alt="Menu">
             <nav>
                 <a href="enVisionMagazine.html"> Home </a>
                 <a href="about.html"> About </a>
                 <a href="#contact"> Contact </a>
             </nav>
-            <form>
-                <button type="submit"> </button>
+            <form action="search.html" method="get">
+                <button type="submit" class="searchButton"> <img src="images/searchIcon.svg"></button>
                 <input type="text" name="query" placeholder="Search...">
             </form>
        </header>
+
+<!-- Hidden menu content -->
+<div id="mobile-menu">
+    <a href="enVisionMagazine.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#contact">Contact</a>
+</div>
 
 <h2> Digital Magazine for diverse topics </h2>
 <section class="allContent">
     <div class="list">
         <h4> Humanities </h4>
-            <a href="spirituality&philosohoy.html"><h5> Spirituality & Philosophy </h5></a>
-            <a href="languages.html"><h5> Langauges </h5></a>
+            <a href="spirituality&philosophy.html"><h5> Spirituality & Philosophy </h5></a>
+            <a href="languages.html"><h5> Languages </h5></a>
             <a href="history.html"><h5> History </h5></a>
             <a href="geography.html"><h5> Geography </h5></a>
             <a href="politics.html"><h5> Politics </h5></a>
@@ -39,7 +47,7 @@
             <a href="biology.html"><h5> Biology </h5></a>
             <a href="health.html"><h5> Health </h5></a>
             <a href="chemistry.html"><h5> Chemistry </h5></a>
-            <a href="Mathematics.html"><h5> Mathematics </h5></a>
+            <a href="mathematics.html"><h5> Mathematics </h5></a>
             <a href="physics.html"><h5> Physics </h5></a>
             <a href="astronomy.html"><h5> Astronomy </h5></a>
             <a href="technology.html"><h5> Technology </h5></a>
@@ -65,11 +73,65 @@
             While extreme cases may need therapy, most simply reflect deep interests. Where fear repels, philia embraces.
             </p>
         </div>
+                <div id="interactives">
+          <div class="icon-container">
+              <img src="Images/like.png" class="icon" id="like">
+              <span id="like-count">0</span>
+          </div>
+          <div class="icon-container">
+              <img src="Images/comment.png" class="icon" id="comment">
+              <span id="comment-count">0</span>
+          </div>
+          <div class="icon-container">
+              <img src="Images/share.png" class="icon" id="share">
+              <span id="share-count">0</span>
+          </div>
+      </div>
+        <!-- Comments section -->
+        <div id="comment-section" style="display: none; margin-top: 15px;">
+            <textarea id="comment-input" rows="3" placeholder="Write a comment..."></textarea>
+            <button id="submit-comment">Comment</button>
+        </div>
+        <!-- Where submitted comments will appear -->
+        <div id="comments-list"></div>
+
+        <!-- Delete Confirmation Overlay -->
+        <div id="delete-confirm" class="delete-confirm hidden">
+          <p>Are you sure you want to delete this comment?</p>
+          <button id="confirm-delete">Confirm</button>
+          <button id="cancel-delete">Cancel</button>
+        </div>
+
+
+        <!-- Share Options -->
+        <div id="share-options" class="share-options hidden">
+        <a href="mailto:?subject=Check this out!&body=I thought you’d find this interesting: https://yourwebsite.com" target="_blank">
+          <img src="Images/email.png" alt="Email" class="icon email">
+        </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://yourwebsite.com" target="_blank">
+          <img src="Images/facebook.png" alt="Facebook" class="icon facebook">
+        </a>
+        <a href="https://twitter.com/intent/tweet?url=https://yourwebsite.com&text=Check this out!" target="_blank">
+          <img src="Images/twitter.png" alt="Twitter" class="icon twitter">
+        </a>
+        <a href="https://wa.me/?text=Check this out! https://yourwebsite.com" target="_blank">
+          <img src="Images/whatsapp.png" alt="WhatsApp" class="icon whatsapp">
+        </a>
+        <a href="https://t.me/share/url?url=https://yourwebsite.com&text=Check this out!" target="_blank">
+          <img src="Images/telegram.png" alt="Telegram" class="icon telegram">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="Images/instagram.png" alt="Instagram" class="icon instagram">
+        </a>
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://yourwebsite.com" target="_blank">
+          <img src="Images/linkedIn.png" alt="LinkedIn" class="icon linkedin">
+        </a>
+      </div>
     </div>
 
     <div class="stories">
         <h1 class="storiesTitle"> Top Stories</h1>
-        <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-l3.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
                 <p> 
@@ -77,7 +139,7 @@
                 </p> 
             </div>
         </a>
-        <a href="enVisionMagazine-top2.html" onclick="localStorage.setItem('activeStory', 'light-speed');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-py3.html" onclick="localStorage.setItem('activeStory', 'light-speed');" style="text-decoration: none; color: inherit;">
             <div class="str strR" data-id="light-speed">
                 <h3> Light Speed </h3>
                 <p> 
@@ -85,7 +147,7 @@
                 </p>  
             </div>
         </a>
-        <a href="enVisionMagazine-top3.html" onclick="localStorage.setItem('activeStory', 'bees-life');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-b3.html" onclick="localStorage.setItem('activeStory', 'bees-life');" style="text-decoration: none; color: inherit;">
             <div class="str strR" data-id="bees-life"> 
                 <h3> Bees Life </h3>
                 <p> 
@@ -101,14 +163,16 @@
 <footer>
 <p> Copyright innovi 2022 -2024 </p>
 <div class="socials">
-    <img src="images/facebook.png" >
-    <img src="images/twitter.png" >
+    <img src="images/facebookHover.png" >
+    <img src="images/x.png" >
     <img src="images/youtube.png" >
 </div>
 <p> info.-envision@innovi.com </p>
 </footer>
 
 <!-- Footer -->
+
+<script type="module" src="js/static-interactives.js"> </script>
 
 	</body>
 </html>
