--- a/enVision-Magazine/enVisionMagazine-s5.html
+++ b/enVision-Magazine/enVisionMagazine-s5.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Spirituality & Philosophy </div>
-            <img src="images/shaw.jpg">
-            <h3> Bernard Shaw </h3>
+            <div class="tag">Social Sciences </div>
+            <img src="images/individuality.jpg">
+            <h3> Individuality in Social Science </h3>
             <p>
-               George Bernard Shaw was a renowned Irish playwright, critic, and polemicist born in 1856. Known for his wit and sharp social commentary, he challenged Victorian norms with plays like "Pygmalion" and "Man and Superman".<br>
-               <br>
-               " Shaw addressed issues such as class inequality, education, and women's rights. His works combined humor with serious philosophical and political questions, making them both entertaining and thought-provoking.<br>
-               <br>
-               He received the Nobel Prize in Literature in 1925 and remains one of the most influential playwrights of the English language. Shaw believed in art as a vehicle for social change and intellectual engagement.
+            Individuality emphasizes the uniqueness of each person—their thoughts, choices, and expression. In social science, it balances the study of community by focusing on self-identity and personal agency.<br>
+            <br>
+            Individuality fosters creativity and progress, allowing societies to grow through diverse contributions. However, too much emphasis on individualism can weaken social bonds, while too little can stifle freedom. Cultures differ:<br>
+            <br>
+            Western societies often celebrate individual achievement, while collectivist cultures stress harmony. Social science explores this dynamic, showing how individuality and belonging coexist, shaping social behavior. Together, they form the tension that drives human development, innovation, and the richness of cultural life.
             </p>
         </div>
                 <div id="interactives">
