Update & Add articles pages 9

--- a/enVision-Magazine/enVisionMagazine-sp4.html
+++ b/enVision-Magazine/enVisionMagazine-sp4.html
@@ -35,7 +35,7 @@
 
 <h2> Digital Magazine for diverse topics </h2>
 <section class="allContent">
-    <div class="list">
+     <div class="list">
         <h4> Humanities </h4>
             <a href="spirituality&philosophy.html"><h5> Spirituality & Philosophy </h5></a>
             <a href="languages.html"><h5> Languages </h5></a>
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <div class="tag">Sports </div>
+            <img src="images/swimming.jpg">
+            <h3> Swimming Miracle: The Olympic Hero with Eight Medals </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            In the 2008 Beijing Olympics, American swimmer Michael Phelps achieved an unprecedented feat, winning eight gold medals. His dominance in multiple events—from butterfly to freestyle—showcased not only physical ability but also extraordinary discipline and determination.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            Breaking Mark Spitz’s 1972 record of seven golds, Phelps set a new standard for Olympic excellence. His performance inspired millions worldwide, highlighting the spirit of dedication and perseverance in sports.<br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            Phelps’ achievement remains one of the most iconic moments in Olympic history, proving how human potential, when combined with relentless training, can push the limits of what was once thought impossible.
             </p>
         </div>
                 <div id="interactives">
