--- a/enVision-Magazine/enVisionMagazine-sp5.html
+++ b/enVision-Magazine/enVisionMagazine-sp5.html
@@ -35,7 +35,7 @@
 
 <h2> Digital Magazine for diverse topics </h2>
 <section class="allContent">
-    <div class="list">
+     <div class="list">
         <h4> Humanities </h4>
             <a href="spirituality&philosophy.html"><h5> Spirituality & Philosophy </h5></a>
             <a href="languages.html"><h5> Languages </h5></a>
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <div class="tag">Sports </div>
+            <img src="images/nadia.jpg">
+            <h3>  Nadia Comăneci: A Perfect Ten in Gymnastic </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            At the 1976 Montreal Olympics, 14-year-old Nadia Comăneci of Romania stunned the world by scoring the first-ever perfect ten in Olympic gymnastics.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            Her flawless routine on the uneven bars earned her a place in history, and she went on to collect multiple gold medals at the games. Comăneci’s precision, grace, and confidence revolutionized gymnastics, inspiring generations of athletes.<br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            The scoreboard wasn’t even designed to display a 10, underscoring the historic nature of her achievement. Nadia’s story is not just about medals but about redefining excellence, showing how talent and dedication can push boundaries and set new global standards.
             </p>
         </div>
                 <div id="interactives">
