--- a/enVision-Magazine/enVisionMagazine-t4.html
+++ b/enVision-Magazine/enVisionMagazine-t4.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <img src="images/smartphone.jpg">
+            <h3> The Birth of the Smartphone </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            The smartphone, emerging in the early 2000s, revolutionized communication and technology. Combining mobile telephony with computing power, it placed the internet, camera, and countless tools in people’s hands.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            Apple’s iPhone (2007) and early Android devices transformed daily life, turning phones into essential companions for work, entertainment, and social connection. Smartphones reshaped industries—from banking to travel—and changed how humans interact with information. <br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            While offering immense convenience, they also raise questions about dependence, privacy, and screen time. The smartphone’s birth marks a turning point in digital history, symbolizing both innovation and the growing integration of technology into human existence.
             </p>
         </div>
                 <div id="interactives">
