--- a/enVision-Magazine/enVisionMagazine-t5.html
+++ b/enVision-Magazine/enVisionMagazine-t5.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <img src="images/digital-photography.jpg">
+            <h3> The Improvement of Digital Photography </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            Digital photography has progressed rapidly since its beginnings in the 1970s. Early digital cameras were bulky with low resolution, but innovation soon brought compact designs and sharper images.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            The 1990s and 2000s saw the rise of consumer digital cameras, later replaced by smartphones that combined convenience with quality. Advances in sensors, lenses, and editing software made photography accessible to all, empowering creativity and documentation. <br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            Today, high-definition cameras capture moments instantly, shareable worldwide. This revolution not only changed art and media but also shaped how people remember, communicate, and express themselves, making digital photography a cornerstone of modern culture.
             </p>
         </div>
                 <div id="interactives">
