--- a/enVision-Magazine/enVisionMagazine-tr4.html
+++ b/enVision-Magazine/enVisionMagazine-tr4.html
@@ -62,15 +62,16 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <div class="tag">Travel </div>
+            <img src="images/hawaii.jpg">
+            <h3>  Hawaii: Paradise of the Pacific </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            Hawaii, a volcanic archipelago in the Pacific Ocean, is renowned for its stunning landscapes, vibrant culture, and unique biodiversity. With lush rainforests, active volcanoes, and golden beaches, it attracts millions of visitors each year.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            Hawaiian culture blends Polynesian traditions with modern influences, celebrated through hula, music, and aloha spirit. The islands are also ecologically significant, home to species found nowhere else.<br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            Hawaii’s history includes the unification of the islands by King Kamehameha and eventual U.S. statehood in 1959. Today, it symbolizes natural beauty and cultural resilience, offering both a paradise for travelers and a sacred homeland for its people. <br>
+            <br>
             </p>
         </div>
                 <div id="interactives">
