--- a/enVision-Magazine/enVisionMagazine-tr5.html
+++ b/enVision-Magazine/enVisionMagazine-tr5.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Technology </div>
-            <img src="images/net.jpg">
-             <h3> Internet World </h3>
+            <div class="tag">Travel </div>
+            <img src="images/train.jpg">
+            <h3>  A Train Journey Across Europe </h3>
             <p>
-            Born from ARPANET in the 1960s, the internet connected researchers first, then the world.<br>
+            Traveling by train across Europe is both practical and enchanting. With an extensive rail network linking major cities and countryside landscapes, travelers can move from Paris to Rome or Berlin to Prague seamlessly.<br>
             <br>
-            Tim Berners-Lee’s invention of the World Wide Web in 1989 made it user-friendly. Now, billions communicate, learn, work, and play online.<br>
+            High-speed trains offer efficiency, while scenic routes reveal mountains, rivers, and villages. Beyond convenience, European train travel carries cultural charm, echoing the golden age of rail journeys. It fosters sustainability, reducing carbon footprints compared to air travel.<br>
             <br>
-            From emails to video calls, online shopping to memes, the internet changed life profoundly. It connects hearts and minds globally. But it also poses risks—privacy, misinformation, addiction. Still, it remains one of humanity’s most transformative inventions.
+            Whether exploring historic capitals or remote regions, the train embodies discovery at a human pace, blending romance, adventure, and practicality in one of the world’s best travel experiences.
             </p>
         </div>
                 <div id="interactives">
