--- a/enVision-Magazine/enVisionMagazine.html
+++ b/enVision-Magazine/enVisionMagazine.html
@@ -14,23 +14,30 @@
              <div class="logo">
                 <img src="images/enVisionG.png">
             </div>
+            <img src="images/menu.png" id="menu-icon" alt="Menu">
             <nav>
                 <a href="enVisionMagazine.html"> Home </a>
                 <a href="about.html"> About </a>
                 <a href="#contact"> Contact </a>
             </nav>
-            <form>
+            <form action="search.html" method="get">
                 <button type="submit" class="searchButton"> <img src="images/searchIcon.svg"></button>
                 <input type="text" name="query" placeholder="Search...">
             </form>
        </header>
+<!-- Hidden menu content -->
+<div id="mobile-menu">
+    <a href="enVisionMagazine.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#contact">Contact</a>
+</div>
 
 <h2> Digital Magazine for diverse topics </h2>
 <section class="allContent">
     <div class="list">
         <h4> Humanities </h4>
-            <a href="spirituality&philosohoy.html"><h5> Spirituality & Philosophy </h5></a>
-            <a href="languages.html"><h5> Langauges </h5></a>
+            <a href="spirituality&philosophy.html"><h5> Spirituality & Philosophy </h5></a>
+            <a href="languages.html"><h5> Languages </h5></a>
             <a href="history.html"><h5> History </h5></a>
             <a href="geography.html"><h5> Geography </h5></a>
             <a href="politics.html"><h5> Politics </h5></a>
@@ -39,7 +46,7 @@
             <a href="biology.html"><h5> Biology </h5></a>
             <a href="health.html"><h5> Health </h5></a>
             <a href="chemistry.html"><h5> Chemistry </h5></a>
-            <a href="Mathematics.html"><h5> Mathematics </h5></a>
+            <a href="mathematics.html"><h5> Mathematics </h5></a>
             <a href="physics.html"><h5> Physics </h5></a>
             <a href="astronomy.html"><h5> Astronomy </h5></a>
             <a href="technology.html"><h5> Technology </h5></a>
@@ -59,7 +66,7 @@
             <img src="images/Napoleon.jpeg">
             <h3> Napoleon Psychologoical Game </h3>
             <p>
-              Napoleon Bonaparte was known for his strategic and tactical brilliance on the battlefield, and his military campaigns often… <br> <a href="enVisionMagazine-page.html">See More</a>
+              Napoleon Bonaparte was known for his strategic and tactical brilliance on the battlefield, and his military campaigns often… <br> <a href="enVisionMagazine-h1.html">See More</a>
             </p>
         </div>
         <div class="arti">
@@ -68,7 +75,7 @@
             <h3> Beethoven Best Moment </h3>
             <p>
              Ludwig van Beethoven, the renowned composer and pianist, had numerous significant moments and… <br>
-             <a href="enVisionMagazine-page2.html">See More</a>
+             <a href="enVisionMagazine-a2.html">See More</a>
             </p> 
         </div>
         <div class="arti">
@@ -77,14 +84,14 @@
             <h3> Spies War in WWII </h3>
             <p>
               World War II featured extensive espionage and intelligence operations on all sides of the conflict… <br>
-              <a href="enVisionMagazine-page3.html">See More</a>
+              <a href="enVisionMagazine-h3.html">See More</a>
             </p>
         </div>
     </div>
 
     <div class="stories">
         <h1 class="storiesTitle"> Top Stories</h1>
-        <a href="enVisionMagazine-top.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-l3.html" onclick="localStorage.setItem('activeStory', 'charles-dickens');" style="text-decoration: none; color: inherit;">
             <div class="str strTop" data-id="charles-dickens">
                 <h3> Charles Dickens </h3>
                 <p> 
@@ -92,7 +99,7 @@
                 </p> 
             </div>
         </a>
-        <a href="enVisionMagazine-top2.html" onclick="localStorage.setItem('activeStory', 'light-speed');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-py3.html" onclick="localStorage.setItem('activeStory', 'light-speed');" style="text-decoration: none; color: inherit;">
             <div class="str strR" data-id="light-speed">
                 <h3> Light Speed </h3>
                 <p> 
@@ -100,7 +107,7 @@
                 </p>  
             </div>
         </a>
-        <a href="enVisionMagazine-top3.html" onclick="localStorage.setItem('activeStory', 'bees-life');" style="text-decoration: none; color: inherit;">
+        <a href="enVisionMagazine-b3.html" onclick="localStorage.setItem('activeStory', 'bees-life');" style="text-decoration: none; color: inherit;">
             <div class="str strR" data-id="bees-life"> 
                 <h3> Bees Life </h3>
                 <p> 
@@ -108,6 +115,7 @@
                 </p> 
             </div>
         </a>
+        <a href="writing-article.html"> Write Your Article.. </a>
     </div>
     
 </section>
@@ -116,8 +124,8 @@
 <footer>
 <p> Copyright innovi 2022 -2024 </p>
 <div class="socials">
-    <img src="images/facebook.png" >
-    <img src="images/twitter.png" >
+    <img src="images/facebookHover.png" >
+    <img src="images/x.png" >
     <img src="images/youtube.png" >
 </div>
 <p> info.-envision@innovi.com </p>
