--- a/enVision-Magazine/enVisionMagazine-m2.html
+++ b/enVision-Magazine/enVisionMagazine-m2.html
@@ -62,7 +62,7 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
+            <div class="tag"> Mathematics </div>
             <img src="images/romannums.jpg">
            <h3>Roman Numbers </h3>
             <p>
