--- a/enVision-Magazine/enVisionMagazine-m3.html
+++ b/enVision-Magazine/enVisionMagazine-m3.html
@@ -62,7 +62,7 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
+            <div class="tag"> Mathematics </div>
             <img src="images/pi.jpg">
             <h3>Pi (π) </h3>
             <p>
