--- a/enVision-Magazine/enVisionMagazine-m5.html
+++ b/enVision-Magazine/enVisionMagazine-m5.html
@@ -62,7 +62,7 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
+            <div class="tag"> Mathematics </div>
             <img src="images/Pythagoras.jpg">
             <h3> Pythagoras’ Theorem: A Mathematical Classic </h3>
             <p>
