--- a/enVision-Magazine/enVisionMagazine-m4.html
+++ b/enVision-Magazine/enVisionMagazine-m4.html
@@ -62,7 +62,7 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
+            <div class="tag"> Mathematics </div>
             <img src="images/infinity.jpg">
             <h3> Infinity in Mathematics: Endless Possibilities </h3>
             <p>
