--- a/enVision-Magazine/enVisionMagazine-hth3.html
+++ b/enVision-Magazine/enVisionMagazine-hth3.html
@@ -63,13 +63,13 @@
         <div class="arti full-arti">
             <div class="tag">Health </div>
             <img src="images/ai-health.jpg">
-            <h3> AI in Health </h3>
+            <h3> New Frontiers in Drug Development </h3>
             <p>
-            Artificial intelligence is transforming healthcare. From diagnosing diseases with precision to predicting patient risks, AI assists doctors in real time.<br>
+            In 2025, medical drug development has seen significant strides across several fronts. The FDA approved multiple novel therapies including brensocatib for non-cystic fibrosis bronchiectasis and zongertinib for NSCLC with HER2 mutations.<br>
             <br>
-            Algorithms read X-rays, suggest treatments, and streamline hospital systems. Chatbots support mental health, while wearables track vital signs.<br>
+            Meanwhile, advances in obesity and diabetes treatments are being recognized globally: the WHO has backed GLP-1 weight-loss drugs for long-term treatment in adults with BMI over 30, framing obesity as a chronic disease.<br>
             <br>
-            In pandemics, AI models help forecast outbreaks and manage resources. Yet, challenges like data privacy and bias remain. Still, AI promises a future where healthcare becomes more personalized, efficient, and accessible—saving lives through code.
+            Drug repurposing and AI-supported discovery are also rising: a network-medicine framework identified approved compounds that might modulate hallmarks of aging. Altogether, these developments highlight an era of faster, more targeted, and broader access to therapy.
             </p>
         </div>
                 <div id="interactives">
