--- a/enVision-Magazine/enVisionMagazine-hth5.html
+++ b/enVision-Magazine/enVisionMagazine-hth5.html
@@ -62,14 +62,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Health </div>
-            <img src="images/vaccine.jpg">
+            <img src="images/samples.jpg">
             <h3> The Development of Vaccines: Science Protecting Humanity </h3>
             <p>
-            Vaccine development has been one of medicine’s greatest achievements, saving millions of lives. The journey began in 1796 when Edward Jenner used cowpox to protect against smallpox, laying the foundation for immunology.<br>
+            Discovered by Alexander Fleming in 1928, penicillin became the first true antibiotic, revolutionizing modern medicine. Before its use, even minor infections could be fatal, and surgeries carried high risks of deadly complications.<br>
             <br>
-            Modern vaccines are created through rigorous research, clinical trials, and safety testing, often taking years before approval. Recent advances, such as mRNA technology in COVID-19 vaccines, have accelerated timelines while maintaining safety.<br>
+            With large-scale production during World War II, penicillin saved countless soldiers’ lives by treating infected wounds and pneumonia. Its success opened the door to the antibiotic era, dramatically reducing deaths from bacterial diseases like syphilis, scarlet fever, and tuberculosis.<br>
             <br>
-            Vaccines work by training the immune system to recognize and fight pathogens without causing illness. They not only protect individuals but also communities through herd immunity, making them vital tools in global public health.
+            Beyond medicine, penicillin transformed public health, extended life expectancy, and reshaped society’s relationship with disease. It remains a symbol of scientific discovery’s power to change history.
             </p>
         </div>
                 <div id="interactives">
