--- a/enVision-Magazine/health.html
+++ b/enVision-Magazine/health.html
@@ -82,9 +82,9 @@
         <div class="arti">
             <div class="tag">Health</div>
             <img src="images/ai-health.jpg">
-            <h3>  AI in Health </h3>
+            <h3> New Frontiers in Drug Development </h3>
             <p>
-              Artificial intelligence is transforming healthcare. From diagnosing diseases with precision to predicting patient risks… <br>
+               In 2025, medical drug development has seen significant strides across several fronts… <br>
               <a href="enVisionMagazine-hth3.html">See More</a>
             </p>
         </div>
@@ -99,10 +99,10 @@
         </div>
         <div class="arti">
             <div class="tag">Health</div>
-            <img src="images/vaccine.jpg">
-            <h3>  The Development of Vaccines: Science Protecting Humanity </h3>
+            <img src="images/samples.jpg">
+            <h3>  Penicillin: The Drug That Changed the World </h3>
             <p>
-              Vaccine development has been one of medicine’s greatest achievements, saving millions of lives… <br>
+              Discovered by Alexander Fleming in 1928, penicillin became the first true antibiotic, revolutionizing modern medicine.… <br>
               <a href="enVisionMagazine-hth5.html">See More</a>
             </p>
         </div>
