Search Static Articles Too

--- a/enVision-Magazine/search.html
+++ b/enVision-Magazine/search.html
@@ -230,6 +230,24 @@ p {
         "social sciences": "social-articles",
         "economics": "economics-articles",
         "geography": "geography1-articles",
+        "history": "history1-articles",
+        "languages": "languages1-articles",
+        "biology": "biology1-articles",
+        "health": "health1-articles",
+        "technology": "technology1-articles",
+        "sports": "sports1-articles",
+        "hobbies": "hobbies1-articles",
+        "travel": "travel1-articles",
+        "food": "food1-articles",
+        "spirituality & philosophy": "spirituality&philosophy1-articles",
+        "politics": "politics1-articles",
+        "arts": "arts1-articles",
+        "chemistry": "chemistry1-articles",
+        "mathematics": "mathematics1-articles",
+        "physics": "physics1-articles",
+        "astronomy": "astronomy1-articles",
+        "social sciences": "social1-articles",
+        "economics": "economics1-articles",
     };
 
     async function searchArticles() {
